--- a/baseline_rgb.ipynb
+++ b/baseline_rgb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -17,31 +17,33 @@
     "import os\n",
     "import theano\n",
     "import theano.tensor as T\n",
-    "import lasagne"
+    "import lasagne\n",
+    "\n",
+    "theano.config.exception_verbosity = \"high\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Волшебные переменные"
+    "### Р’РѕР»С€РµР±РЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Изображения\n",
+    "# РР·РѕР±СЂР°Р¶РµРЅРёСЏ\n",
     "IMG_GEN_IMG = False\n",
     "IMG_HEIGHT = 60\n",
     "IMG_WIDTH = 60\n",
     "IMG_GRAY = True\n",
     "\n",
-    "# Обучаем\n",
+    "# РћР±СѓС‡Р°РµРј\n",
     "NUM_EPOCH = 100\n",
     "BATCH_SIZE = 10"
    ]
@@ -50,57 +52,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Препарируем изображение"
+    "#### РџСЂРµРїР°СЂРёСЂСѓРµРј РёР·РѕР±СЂР°Р¶РµРЅРёРµ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processed images:  1000\n",
+      "processed images:  2000\n",
+      "processed images:  3000\n",
+      "processed images:  4000\n",
+      "processed images:  5000\n",
+      "processed images:  6000\n",
+      "processed images:  7000\n",
+      "processed images:  8000\n",
+      "processed images:  9000\n",
+      "processed images:  10000\n",
+      "processed images:  11000\n",
+      "processed images:  12000\n",
+      "processed images:  13000\n",
+      "processed images:  14000\n",
+      "processed images:  15000\n",
+      "processed images:  16000\n",
+      "processed images:  17000\n",
+      "processed images:  18000\n",
+      "processed images:  19000\n",
+      "processed images:  20000\n",
+      "processed images:  21000\n",
+      "processed images:  22000\n",
+      "processed images:  23000\n",
+      "processed images:  24000\n",
+      "processed images:  25000\n",
+      "processed images:  1000\n",
+      "processed images:  2000\n",
+      "processed images:  3000\n",
+      "processed images:  4000\n",
+      "processed images:  5000\n",
+      "processed images:  6000\n",
+      "processed images:  7000\n",
+      "processed images:  8000\n",
+      "processed images:  9000\n",
+      "processed images:  10000\n",
+      "processed images:  11000\n",
+      "processed images:  12000\n",
+      "processed images:  13000\n",
+      "processed images:  14000\n",
+      "processed images:  15000\n",
+      "processed images:  16000\n",
+      "processed images:  17000\n",
+      "processed images:  18000\n",
+      "processed images:  19000\n",
+      "processed images:  20000\n",
+      "processed images:  21000\n",
+      "processed images:  22000\n",
+      "processed images:  23000\n",
+      "processed images:  24000\n",
+      "processed images:  25000\n"
+     ]
+    }
+   ],
    "source": [
-    "X,y = load_data(IMG_GEN_IMG, IMG_HEIGHT, IMG_WIDTH, IMG_GRAY)\n",
-    "# X,y = prepar_img(IMG_HEIGHT, IMG_WIDTH, IMG_GRAY)\n",
+    "X,y = load_data(True, IMG_HEIGHT, IMG_WIDTH, IMG_GRAY)\n",
     "\n",
-    "# Режем дату\n",
+    "X_new,y_new = load_data(True, IMG_HEIGHT, IMG_WIDTH,not IMG_GRAY)\n",
+    "\n",
+    "# Р РµР¶РµРј РґР°С‚Сѓ\n",
     "TRAIN_SIZE = (len(X)*4)/5\n",
     "VAL_SIZE = len(X)/10\n",
     "TEST_SIZE = len(X) - TRAIN_SIZE - VAL_SIZE\n",
     "\n",
-    "X_train, y_train, X_val, y_val, X_test, y_test = prepar_data(X, y, TRAIN_SIZE, VAL_SIZE, TEST_SIZE)"
+    "X_train, y_train, X_val, y_val, X_test, y_test = prepar_data(X, y, TRAIN_SIZE, VAL_SIZE, TEST_SIZE)\n",
+    "\n",
+    "X_train_new, y_train_new, \\\n",
+    "X_val_new, y_val_new, X_test_new, y_test_new = prepar_data(X_new, y_new, TRAIN_SIZE, VAL_SIZE, TEST_SIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25000, 1, 60, 60) (25000, 3, 60, 60)\n"
+     ]
+    }
+   ],
    "source": [
     "input_X = T.tensor4(\"X cat/dog image\")\n",
     "target_y = T.vector(\"target Y cat/dog\",dtype='int32')\n",
     "input_shape = [None] + list(X.shape[1:])\n",
-    "print X.shape"
+    "\n",
+    "input_X_new = T.tensor4(\"X cat/dog image gray\")\n",
+    "input_shape_new = [None] + list(X_new.shape[1:])\n",
+    "\n",
+    "print X.shape, X_new.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Разварачиваем сеть"
+    "#### Р Р°Р·РІР°СЂР°С‡РёРІР°РµРј СЃРµС‚СЊ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#\n",
+    "#\n",
+    "#    FIRST INPUT\n",
+    "#\n",
+    "#\n",
+    "\n",
     "input_layer = lasagne.layers.InputLayer(shape = input_shape,input_var=input_X)\n",
     "\n",
     "conv_1 = lasagne.layers.Conv2DLayer(input_layer, num_filters = 10,filter_size = (2,2),\n",
@@ -108,13 +189,37 @@
     "\n",
     "batch_1 = lasagne.layers.batch_norm(conv_1)\n",
     "\n",
-    "pool_1 = lasagne.layers.MaxPool2DLayer(batch_1,pool_size = 5)\n",
     "\n",
-    "batch_2 = lasagne.layers.batch_norm(pool_1)\n",
     "\n",
-    "dense_output = lasagne.layers.DenseLayer(batch_2,\n",
-    "                                         num_units = 2, #нейрон котэ и нейрон собакэ\n",
-    "                                        nonlinearity = lasagne.nonlinearities.softmax,\n",
+    "#\n",
+    "#\n",
+    "#    SECOND INPUT\n",
+    "#\n",
+    "\n",
+    "input_layer2 = lasagne.layers.InputLayer(shape = input_shape_new,input_var=input_X_new)\n",
+    "\n",
+    "conv_2 = lasagne.layers.Conv2DLayer(input_layer2, num_filters = 10,filter_size = (2,2),\n",
+    "                                    nonlinearity= lasagne.nonlinearities.very_leaky_rectify)\n",
+    "\n",
+    "batch_2 = lasagne.layers.batch_norm(conv_2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "#\n",
+    "#     OUTPUT\n",
+    "#\n",
+    "\n",
+    "\n",
+    "con = lasagne.layers.ConcatLayer([batch_1, batch_2])\n",
+    "\n",
+    "pool_1 = lasagne.layers.MaxPool2DLayer(con, pool_size = 5)\n",
+    "\n",
+    "\n",
+    "batch_3 = lasagne.layers.batch_norm(pool_1)\n",
+    "\n",
+    "\n",
+    "dense_output = lasagne.layers.DenseLayer(batch_3, num_units = 2, nonlinearity = lasagne.nonlinearities.softmax,\n",
     "                                        name='output')"
    ]
   },
@@ -122,40 +227,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#предсказание нейронки (theano-преобразование)\n",
+    "#РїСЂРµРґСЃРєР°Р·Р°РЅРёРµ РЅРµР№СЂРѕРЅРєРё (theano-РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРёРµ)\n",
     "y_predicted = lasagne.layers.get_output(dense_output)\n",
     "\n",
-    "#все веса нейронки (shared-переменные)\n",
+    "#РІСЃРµ РІРµСЃР° РЅРµР№СЂРѕРЅРєРё (shared-РїРµСЂРµРјРµРЅРЅС‹Рµ)\n",
     "all_weights = lasagne.layers.get_all_params(dense_output,trainable=True)\n",
     "\n",
-    "#функция ошибки - средняя кроссэнтропия\n",
+    "#С„СѓРЅРєС†РёСЏ РѕС€РёР±РєРё - СЃСЂРµРґРЅСЏСЏ РєСЂРѕСЃСЃСЌРЅС‚СЂРѕРїРёСЏ\n",
     "loss = lasagne.objectives.categorical_crossentropy(y_predicted,target_y).mean()\n",
     "\n",
-    "#регуляризация, если захотите\n",
+    "#СЂРµРіСѓР»СЏСЂРёР·Р°С†РёСЏ, РµСЃР»Рё Р·Р°С…РѕС‚РёС‚Рµ\n",
     "loss += lasagne.regularization.l2(loss)\n",
     "\n",
-    "#<возможно добавить регуляризатор>\n",
+    "#<РІРѕР·РјРѕР¶РЅРѕ РґРѕР±Р°РІРёС‚СЊ СЂРµРіСѓР»СЏСЂРёР·Р°С‚РѕСЂ>\n",
     "accuracy = lasagne.objectives.categorical_accuracy(y_predicted,target_y).mean()\n",
     "\n",
-    "#сразу посчитать словарь обновлённых значений с шагом по градиенту, как раньше\n",
+    "#СЃСЂР°Р·Сѓ РїРѕСЃС‡РёС‚Р°С‚СЊ СЃР»РѕРІР°СЂСЊ РѕР±РЅРѕРІР»С‘РЅРЅС‹С… Р·РЅР°С‡РµРЅРёР№ СЃ С€Р°РіРѕРј РїРѕ РіСЂР°РґРёРµРЅС‚Сѓ, РєР°Рє СЂР°РЅСЊС€Рµ\n",
     "updates_sgd = lasagne.updates.adamax(loss,all_weights,learning_rate = 0.0001)\n",
     "\n",
-    "#функция, которая обучает сеть на 1 шаг и возвращащет значение функции потерь и точности\n",
-    "train_fun = theano.function([input_X,target_y],[loss,accuracy],updates= updates_sgd)\n",
+    "#С„СѓРЅРєС†РёСЏ, РєРѕС‚РѕСЂР°СЏ РѕР±СѓС‡Р°РµС‚ СЃРµС‚СЊ РЅР° 1 С€Р°Рі Рё РІРѕР·РІСЂР°С‰Р°С‰РµС‚ Р·РЅР°С‡РµРЅРёРµ С„СѓРЅРєС†РёРё РїРѕС‚РµСЂСЊ Рё С‚РѕС‡РЅРѕСЃС‚Рё\n",
+    "train_fun = theano.function([input_X, input_X_new, target_y],[loss,accuracy],updates= updates_sgd)\n",
     "\n",
-    "#функция, которая считает точность\n",
-    "accuracy_fun = theano.function([input_X,target_y],accuracy)"
+    "#С„СѓРЅРєС†РёСЏ, РєРѕС‚РѕСЂР°СЏ СЃС‡РёС‚Р°РµС‚ С‚РѕС‡РЅРѕСЃС‚СЊ\n",
+    "accuracy_fun = theano.function([input_X, input_X_new, target_y],accuracy)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Обучаем"
+    "#### РћР±СѓС‡Р°РµРј"
    ]
   },
   {
@@ -174,9 +279,9 @@
     "    train_acc = 0\n",
     "    train_batches = 0\n",
     "    start_time = time.time()\n",
-    "    for batch in iterate_minibatches(X_train, y_train, BATCH_SIZE):\n",
-    "        inputs, targets = batch\n",
-    "        train_err_batch, train_acc_batch= train_fun(inputs, targets)\n",
+    "    for batch in iterate_minibatches(X_train, X_train_new, y_train, BATCH_SIZE):\n",
+    "        inputs, inputs_new, targets = batch\n",
+    "        train_err_batch, train_acc_batch= train_fun(inputs, inputs_new, targets)\n",
     "        train_err += train_err_batch\n",
     "        train_acc += train_acc_batch\n",
     "        train_batches += 1\n",
@@ -184,9 +289,9 @@
     "    # And a full pass over the validation data:\n",
     "    val_acc = 0\n",
     "    val_batches = 0\n",
-    "    for batch in iterate_minibatches(X_val, y_val, BATCH_SIZE):\n",
-    "        inputs, targets = batch\n",
-    "        val_acc += accuracy_fun(inputs, targets)\n",
+    "    for batch in iterate_minibatches(X_val, X_val_new, y_val, BATCH_SIZE):\n",
+    "        inputs, inputs_new, targets = batch\n",
+    "        val_acc += accuracy_fun(inputs, inputs_new, targets)\n",
     "        val_batches += 1\n",
     "\n",
     "    \n",
@@ -232,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Замер скорости сети"
+    "# Р—Р°РјРµСЂ СЃРєРѕСЂРѕСЃС‚Рё СЃРµС‚Рё"
    ]
   },
   {
@@ -314,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
